--- a/src/Homarr.Web/package.json
+++ b/src/Homarr.Web/package.json
@@ -3,14 +3,14 @@
   "name": "Homarr.Web",
   "private": true,
   "dependencies": {
-    "angular2": "2.0.0-beta.11",
+    "angular2": "^2.0.0-beta.17",
     "bootstrap": "4.0.0-alpha.2",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.5.0",
     "jquery": "^2.2.2",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.2",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.6",
     "systemjs": "^0.19.24",
     "typings": "^0.8.1",
     "underscore": "^1.8.3",
