--- a/src/homarr-shopping/package.json
+++ b/src/homarr-shopping/package.json
@@ -20,10 +20,10 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
-    "angularfire2": "^2.0.0-beta.6",
+    "angularfire2": "^2.0.0-beta.6-preview",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
-    "firebase": "^3.5.3",
+    "firebase": "^3.6.1",
     "font-awesome": "^4.7.0",
     "quagga": "^0.11.5",
     "rxjs": "5.0.0-beta.12",
