--- a/src/homarr-shopping/package.json
+++ b/src/homarr-shopping/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "firebase": "^3.6.1",
     "font-awesome": "^4.7.0",
+    "material-design-icons": "^3.0.1",
     "quagga": "^0.11.5",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
