--- a/src/homarr-shopping/package.json
+++ b/src/homarr-shopping/package.json
@@ -12,31 +12,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
-    "angularfire2": "^2.0.0-beta.6-preview",
+    "@angular/animations": "^7.2.11",
+    "@angular/cdk": "^7.3.6",
+    "@angular/common": "^7.2.11",
+    "@angular/compiler": "^7.2.11",
+    "@angular/core": "^7.2.11",
+    "@angular/fire": "^5.1.2",
+    "@angular/forms": "^7.2.11",
+    "@angular/http": "^7.2.11",
+    "@angular/material": "^7.3.6",
+    "@angular/platform-browser": "^7.2.11",
+    "@angular/platform-browser-dynamic": "^7.2.11",
+    "@angular/platform-server": "^7.2.11",
+    "@angular/router": "^7.2.11",
+    "@zxing/ngx-scanner": "^1.3.0",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
-    "firebase": "^3.6.1",
+    "firebase": "^5.9.1",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
-    "quagga": "^0.11.5",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.0.0-rc.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.2.1",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "^7.3.6",
+    "@angular/compiler-cli": "^7.2.11",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.21",
-    "codelyzer": "~1.0.0-beta.3",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -47,7 +53,7 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "~2.0.3",
+    "typescript": "^3.2.1",
     "webdriver-manager": "10.2.5"
   }
 }
